--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -471,4 +471,16 @@
 	url = "\url{http://nbn-resolving.de/urn/resolver.pl?urn:nbn:de:bvb:91-diss-20170320-1339645-0-4}",
 	howpublished = "\url{http://nbn-resolving.de/urn/resolver.pl?urn:nbn:de:bvb:91-diss-20170320-1339645-0-4}",
 }
+
+
+@thesis
+{
+	DiplomaWeber,
+	author = "Weber, Tobias",
+	title = {{MIEZE in Theory, Simulation and Experiment}},
+	type = "Diploma Thesis",
+	school = {Technische Universität M\"unchen, Physikdepartment E21},
+	address = {Munich, Germany},
+	year = 2012,
+}
 % -----------------------------------------------------------------------------
