--- a/tex/xtal.tex
+++ b/tex/xtal.tex
@@ -8,7 +8,7 @@
 \chapter{Crystal and Instrument Coordinate Systems}
 \label{ch:xtal}
 
-In this chapter we review the theory for conversion between crystal coordinates and scattering angles at the triple-axis instrument. Section \ref{sec:xtalcoords} introduces crystal coordinates and the so-called UB matrix formalism, section \ref{sec:tasangles} calculates the corresponding TAS angles. Note this chapter has been published in the manual of the software from Ref. \cite{Takin2021} and is based on an earlier version of these derivations from my (physics) PhD thesis \cite{PhDWeber}.
+In this chapter we review the theory for conversion between crystal coordinates and scattering angles at the triple-axis instrument. Section \ref{sec:xtalcoords} introduces crystal coordinates and the so-called UB matrix formalism, section \ref{sec:tasangles} calculates the corresponding TAS angles. Note this chapter has been published in the manual of the software from Ref. \cite{Takin2021} and is based on an earlier version of these derivations from my (physics) PhD thesis \cite[pp. 139-143]{PhDWeber}.
 
 
 % ------------------------------------------------------------------------------------------------------------------------------------
