--- a/tex/publications.tex
+++ b/tex/publications.tex
@@ -1,5 +1,94 @@
 \chapter{List of publications}
 The latest list of publications can be found on-line under \url{https://orcid.org/0000-0002-7230-1932}. 
-We reproduce the current version in the following.
+We reproduce the current version as of July 2021 in the following.
 
-TODO
+
+\section{Works as principal author}
+\subsection*{Papers}
+\begin{itemize}
+	\item T. Weber, \textit{Update 2.0 to ``Takin: An open-source software for experiment planning, visualisation, and data analysis'', (PII: S2352711016300152)},
+	SoftwareX, Volume 14, 100667 (June 2021),
+	DOI: \href{https://doi.org/10.1016/j.softx.2021.100667}{10.1016/j.softx.2021.100667}.
+
+	\item T. Weber, J. Waizner, P. Steffens, A. Bauer, C. Pfleiderer, M. Garst, and P. B\"oni, 
+	\textit{Polarized inelastic neutron scattering of nonreciprocal spin waves in MnSi},
+	Physical Review B, Volume 100, 060404(R) (12 August 2019),
+	DOI: \href{https://doi.org/10.1103/PhysRevB.100.060404}{10.1103/PhysRevB.100.060404}.
+
+	\item  T. Weber, J. Waizner, G. S. Tucker, L. Beddrich, M. Skoulatos, R. Georgii, A. Bauer, C. Pfleiderer, M. Garst, and P. B\"oni, 
+	\textit{Non-reciprocal magnons in non-centrosymmetric MnSi},
+	AIP Advances, Volume 8, 101328 (9 October 2018),
+	DOI: \href{https://doi.org/10.1063/1.5041036}{10.1063/1.5041036}.
+
+	\item T. Weber, J. Waizner, G. S. Tucker, R. Georgii, M. Kugler, A. Bauer, C. Pfleiderer, M. Garst, and P. B\"oni, 
+	\textit{Field dependence of nonreciprocal magnons in chiral MnSi},
+	Physical Review B, Volume 97, 224403 (5 June 2018),
+	DOI: \href{https://doi.org/10.1103/PhysRevB.97.224403}{10.1103/PhysRevB.97.224403}.
+
+	\item T. Weber, B. Roessli, C. Stock, T. Keller, K. Schmalzl, F. Bourdarot, R. Georgii, R. A. Ewings, R. S. Perry, and P. B\"oni, 
+	\textit{Transverse acoustic phonon anomalies at intermediate wave vectors in $MgV_2O_4$},
+	Physical Review B, Volume 96, 184301 (7 November 2017),
+	DOI: \href{https://doi.org/10.1103/PhysRevB.96.184301}{10.1103/PhysRevB.96.184301}.
+	
+	\item T. Weber, \textit{Update 1.5 to ``Takin: An open-source software for experiment planning, visualisation, and data analysis'', (PII: S2352711016300152)},
+	SoftwareX, Volume 6, Pages 148-149 (10 July 2017),
+	DOI: \href{https://doi.org/10.1016/j.softx.2017.06.002}{10.1016/j.softx.2017.06.002}.
+
+	\item T. Weber, R. Georgii, and P. B\"oni,
+	\textit{Takin: An open-source software for experiment planning, visualisation, and data analysis},
+	SoftwareX, Volume 5, Pages 121-126 (14 July 2016),
+	DOI: \href{https://doi.org/10.1016/j.softx.2016.06.002}{10.1016/j.softx.2016.06.002}.
+
+	\item T. Weber, G. Brandl, R. Georgii, and P. B\"oni,
+	\textit{An open-source software package for data treatment in a MIEZE experiment},
+	Journal of Physics: Conference Series, Volume 528, 012034 (2014),
+	DOI: \href{https://doi.org/10.1088/1742-6596/528/1/012034}{10.1088/1742-6596/528/1/012034}.
+	
+	\item T. Weber, G. Brandl, R. Georgii, W. H\"au\ss{}ler, S. Weichselbaumer, P. B\"oni,
+	\textit{Monte-Carlo simulations for the optimisation of a TOF-MIEZE instrument},
+	Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment Volume Volume 713, Pages 71-75 (11 June 2013),
+	DOI: \href{https://doi.org/10.1016/j.nima.2013.03.010}{10.1016/j.nima.2013.03.010}.
+\end{itemize}
+
+
+\subsection*{Theses}
+\begin{itemize}
+	\item T. Weber, \textit{Dynamics at the Orbital Ordering Phase Transition in $MgV_2O_4$ and at the Ferromagnetic Phase Transition in $MnSi$} (20 March 2017), ISBN: 978-3-8439-3114-4,
+	PhD Thesis in Physics, Technische Universit\"at M\"unchen, Physikdepartment E21,
+	Garching, Germany. URL: \url{http://nbn-resolving.de/urn/resolver.pl?urn:nbn:de:bvb:91-diss-20170320-1339645-0-4}.
+
+	\item T. Weber, \textit{MIEZE in Theory, Simulation and Experiment} (5 December 2012), 
+	Diploma Thesis in Physics, Technische Universit\"at M\"unchen, Physikdepartment E21,
+	Garching, Germany.
+\end{itemize}
+
+
+
+\section{Works as contributing author}
+
+\begin{itemize}
+	\item Y. Nambu, J. Barker, Y. Okino, T. Kikkawa, Y. Shiomi, M. Enderle, T. Weber, B. Winn, M. Graves-Brook, J. M. Tranquada, T. Ziman, M. Fujita, G. E. W. Bauer, E. Saitoh, and K. Kakurai, 
+	\textit{Observation of Magnon Polarization},
+	Physical Review Letters, Volume 125, 027201 (6 July 2020),
+	DOI: \href{https://doi.org/10.1103/PhysRevLett.125.027201}{10.1103/PhysRevLett.125.027201}.
+
+	\item G. Song, L. Porcar, M. B\"ohm, F. Cecillon, C. Dewhurst, Y. Le Goc, J. Locatelli, P. Mutti, and T. Weber, 
+	\textit{Deep Learning Methods On Neutron Scattering Data},
+	EPJ Web of Conferences, Volume 225, 01004 (20 January 2020),
+	DOI: \href{https://doi.org/10.1051/epjconf/202022501004}{10.1051/epjconf/202022501004}.
+
+	\item D. W. Tam, H.-H. Lai, J. Hu, X. Lu, H. C. Walker, D. L. Abernathy, J. L. Niedziela, T. Weber, M. Enderle, Y. Su, Z. Q. Mao, Q. Si, and P. Dai,
+	\textit{Plaquette instability competing with bicollinear ground state in detwinned FeTe},
+	Physical Review B, Volume 100, 054405 (5 August 2019),
+	DOI: \href{https://doi.org/10.1103/PhysRevB.100.054405}{10.1103/PhysRevB.100.054405}.
+	
+	\item R. Georgii and T. Weber,
+	\textit{The Helical Magnet MnSi: Skyrmions and Magnons},
+	Quantum Beam Science 2019, 3(1) (21 February 2019),
+	DOI: \href{https://doi.org/10.3390/qubs3010004}{10.3390/qubs3010004}.
+	
+	\item R. Georgii, T. Weber, G. Brandl, M. Skoulatos, M. Janoschek, S. Mühlbauer, C. Pfleiderer, and P. B\"oni,
+	\textit{The multi-purpose three-axis spectrometer (TAS) MIRA at FRM II},
+	Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment Volume 881, Pages 60-64 (11 February 2018),
+	DOI: \href{https://doi.org/10.1016/j.nima.2017.09.063}{10.1016/j.nima.2017.09.063}.
+\end{itemize}
