--- a/tex/publications.tex
+++ b/tex/publications.tex
@@ -46,7 +46,7 @@ We reproduce the current version as of July 2021 in the following.
 	
 	\item T. Weber, G. Brandl, R. Georgii, W. H\"au\ss{}ler, S. Weichselbaumer, P. B\"oni,
 	\textit{Monte-Carlo simulations for the optimisation of a TOF-MIEZE instrument},
-	Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment Volume Volume 713, Pages 71-75 (11 June 2013),
+	Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment, Volume 713, Pages 71-75 (11 June 2013),
 	DOI: \href{https://doi.org/10.1016/j.nima.2013.03.010}{10.1016/j.nima.2013.03.010}.
 \end{itemize}
 
@@ -84,11 +84,11 @@ We reproduce the current version as of July 2021 in the following.
 	
 	\item R. Georgii and T. Weber,
 	\textit{The Helical Magnet MnSi: Skyrmions and Magnons},
-	Quantum Beam Science 2019, 3(1) (21 February 2019),
+	Quantum Beam Science 2019, Volume 3(1) (21 February 2019),
 	DOI: \href{https://doi.org/10.3390/qubs3010004}{10.3390/qubs3010004}.
 	
 	\item R. Georgii, T. Weber, G. Brandl, M. Skoulatos, M. Janoschek, S. Mühlbauer, C. Pfleiderer, and P. B\"oni,
 	\textit{The multi-purpose three-axis spectrometer (TAS) MIRA at FRM II},
-	Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment Volume 881, Pages 60-64 (11 February 2018),
+	Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment, Volume 881, Pages 60-64 (11 February 2018),
 	DOI: \href{https://doi.org/10.1016/j.nima.2017.09.063}{10.1016/j.nima.2017.09.063}.
 \end{itemize}
