--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -450,6 +450,30 @@
 	note = "[Online; accessed 3-July-2021]",
 }
 
+
+@misc
+{
+	web_boost_asio,
+	title = {{Boost.Signals2, part of the Boost C++ Libraries \cite{web_boost} (Software)}},
+	author = {Christopher M. Kohlhoff},
+	year = {2003-2021},
+	url = "\url{https://www.boost.org/doc/libs/1_76_0/doc/html/boost_asio.html}",
+	howpublished = "\url{https://www.boost.org/doc/libs/1_76_0/doc/html/boost_asio.html}",
+	note = "[Online; accessed 3-July-2021]",
+}
+
+
+@misc
+{
+	web_boost_asio_threadpool,
+	title = {{Class thread\_pool, part of the Boost.Asio C++ library \cite{web_boost_asio} (Software)}},
+	author = {Christopher M. Kohlhoff},
+	year = {2003-2021},
+	url = "\url{https://www.boost.org/doc/libs/1_76_0/doc/html/boost_asio/reference/thread_pool.html}",
+	howpublished = "\url{https://www.boost.org/doc/libs/1_76_0/doc/html/boost_asio/reference/thread_pool.html}",
+	note = "[Online; accessed 3-July-2021]",
+}
+
 % -----------------------------------------------------------------------------
 
 
