--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -454,7 +454,7 @@
 @misc
 {
 	web_boost_asio,
-	title = {{Boost.Signals2, part of the Boost C++ Libraries \cite{web_boost} (Software)}},
+	title = {{Boost.Asio, part of the Boost C++ Libraries \cite{web_boost} (Software)}},
 	author = {Christopher M. Kohlhoff},
 	year = {2003-2021},
 	url = "\url{https://www.boost.org/doc/libs/1_76_0/doc/html/boost_asio.html}",
