--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -331,12 +331,12 @@
 @misc
 {
 	wiki_oklo,
-	author = {{Wikipedia}},
+	author = {{Wikipedia contributors}},
 	title = {{Naturreaktor Oklo --- Wikipedia{,} Die freie Enzyklop\"adie}},
 	year = "2020",
 	url = "\url{https://de.wikipedia.org/w/index.php?title=Naturreaktor_Oklo&oldid=203811915}",
 	howpublished = "\url{https://de.wikipedia.org/w/index.php?title=Naturreaktor_Oklo&oldid=203811915}",
-	note = "[Online; Stand 10. Februar 2021]"
+	note = "[Online; accessed 10-February-2021]"
 }
 
 
@@ -349,6 +349,30 @@
 	url = "\url{https://en.wikipedia.org/w/index.php?title=Einstein_notation&oldid=1015796551}",
 	howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Einstein_notation&oldid=1015796551}",
 	note = "[Online; accessed 14-April-2021]"
+}
+
+
+@misc
+{
+	wiki_line_line_intersection,
+	author = {{Wikipedia contributors}},
+	title = {{Line–line intersection --- {Wikipedia}{,} The Free Encyclopedia}},
+	year = "2021",
+	url = "\url{https://en.wikipedia.org/w/index.php?title=Line%E2%80%93line_intersection&oldid=1021815213}",
+	howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Line%E2%80%93line_intersection&oldid=1021815213}",
+	note = "[Online; accessed 4-July-2021]"
+}
+
+
+@misc
+{
+	wiki_line_sphere_intersection,
+	author = {{Wikipedia contributors}},
+	title = {{Line–sphere intersection --- {Wikipedia}{,} The Free Encyclopedia}},
+	year = "2021",
+	url = "\url{https://en.wikipedia.org/w/index.php?title=Line%E2%80%93sphere_intersection&oldid=1021628678}",
+	howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Line%E2%80%93sphere_intersection&oldid=1021628678}",
+	note = "[Online; accessed 4-July-2021]"
 }
 
 
