--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -378,6 +378,30 @@
 
 @misc
 {
+	web_aabb,
+	author = {{Mozilla Developer Network Web Docs}},
+	title = {{3D collision detection}},
+	year = "2021",
+	url = "\url{https://developer.mozilla.org/en-US/docs/Games/Techniques/3D_collision_detection}",
+	howpublished = "\url{https://developer.mozilla.org/en-US/docs/Games/Techniques/3D_collision_detection}",
+	note = "[Online; accessed 4-July-2021]"
+}
+
+
+@misc
+{
+	web_radial_sweep,
+	author = {Abeer George Ghuneim},
+	title = {{Radial Sweep}},
+	year = "2000",
+	url = "\url{http://www.imageprocessingplace.com/downloads_V3/root_downloads/tutorials/contour_tracing_Abeer_George_Ghuneim/ray.html}",
+	howpublished = "\url{http://www.imageprocessingplace.com/downloads_V3/root_downloads/tutorials/contour_tracing_Abeer_George_Ghuneim/ray.html}",
+	note = "[Online; accessed 4-July-2021]"
+}
+
+
+@misc
+{
 	web_nobel1994,
 	author = {{The Royal Swedish Academy of Science}},
 	title = {{The Nobel Prize in Physics 1994 -- Press Release}},
