--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -148,6 +148,17 @@
 	publisher = {ISO, Geneva, Switzerland},
 	url = {https://www.iso.org/standard/79358.html},
 }
+
+
+@book
+{
+	FUH_geo2020,
+        author = {Rolf Klein and Christian Icking},
+        title = {{Manuscript of the course 01840, ``Algorithmische Geometrie''}},
+        year = {summer semester 2020},
+        publisher = {{FernUniversit\"at in Hagen, Fakult\"at f\"ur Mathematik und Informatik, Hagen, Germany}},
+        url = {https://vu.fernuni-hagen.de/lvuweb/lvu/app/Kurs/1840}
+}
 % -----------------------------------------------------------------------------
 
 
@@ -489,6 +500,18 @@
 
 @misc
 {
+	web_boost_intrusive,
+	title = {{Boost.Intrusive, part of the Boost C++ Libraries \cite{web_boost} (Software)}},
+	author = {Olaf Krzikalla and Ion Gaztanaga},
+	year = {2005-2015},
+	url = "\url{https://www.boost.org/doc/libs/1_76_0/doc/html/intrusive.html}",
+	howpublished = "\url{https://www.boost.org/doc/libs/1_76_0/doc/html/intrusive.html}",
+	note = "[Online; accessed 5-July-2021]",
+}
+
+
+@misc
+{
 	web_boost_signals,
 	title = {{Boost.Signals2, part of the Boost C++ Libraries \cite{web_boost} (Software)}},
 	author = {Douglas Gregor and Frank Mori Hess},
@@ -520,6 +543,18 @@
 	url = "\url{https://www.boost.org/doc/libs/1_76_0/doc/html/boost_asio/reference/thread_pool.html}",
 	howpublished = "\url{https://www.boost.org/doc/libs/1_76_0/doc/html/boost_asio/reference/thread_pool.html}",
 	note = "[Online; accessed 3-July-2021]",
+}
+
+
+@misc
+{
+	web_boost_intrusive_avltree,
+	title = {{Class avltree, part of the Boost.Intrusive C++ library \cite{web_boost_intrusive} (Software)}},
+	author = {Olaf Krzikalla and Ion Gaztanaga},
+	year = {2005-2015},
+	url = "\url{https://www.boost.org/doc/libs/1_76_0/doc/html/intrusive/avl_set_multiset.html}",
+	howpublished = "\url{https://www.boost.org/doc/libs/1_76_0/doc/html/intrusive/avl_set_multiset.html}",
+	note = "[Online; accessed 5-July-2021]",
 }
 
 % -----------------------------------------------------------------------------
