--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -500,6 +500,18 @@
 
 @misc
 {
+	web_boost_polygon,
+	title = {{Boost.Polygon, part of the Boost C++ Libraries \cite{web_boost} (Software)}},
+	author = {{Intel Corporation}},
+	year = {2008-2010},
+	url = "\url{https://www.boost.org/doc/libs/1_76_0/libs/polygon/doc/index.htm}",
+	howpublished = "\url{https://www.boost.org/doc/libs/1_76_0/libs/polygon/doc/index.htm}",
+	note = "[Online; accessed 5-July-2021]",
+}
+
+
+@misc
+{
 	web_boost_intrusive,
 	title = {{Boost.Intrusive, part of the Boost C++ Libraries \cite{web_boost} (Software)}},
 	author = {Olaf Krzikalla and Ion Gaztanaga},
@@ -554,6 +566,18 @@
 	year = {2005-2015},
 	url = "\url{https://www.boost.org/doc/libs/1_76_0/doc/html/intrusive/avl_set_multiset.html}",
 	howpublished = "\url{https://www.boost.org/doc/libs/1_76_0/doc/html/intrusive/avl_set_multiset.html}",
+	note = "[Online; accessed 5-July-2021]",
+}
+
+
+@misc
+{
+	web_boost_polygon_voronoi,
+	title = {{Voronoi extensions, part of the Boost.Polygon C++ library \cite{web_boost_polygon} (Software)}},
+	author = {Andrii Sydorchuk},
+	year = {2010-2013},
+	url = "\url{https://www.boost.org/doc/libs/1_76_0/libs/polygon/doc/voronoi_main.htm}",
+	howpublished = "\url{https://www.boost.org/doc/libs/1_76_0/libs/polygon/doc/voronoi_main.htm}",
 	note = "[Online; accessed 5-July-2021]",
 }
 
