started with line segment voronoi diagrams

--- a/tex/implementation.tex
+++ b/tex/implementation.tex
@@ -242,6 +242,25 @@ The radial sweep algorithm works as given below, following the descriptions in R
 
 \subsection{Calculation of the Voronoi diagram}
 \label{sec:voronoi}
+\begin{figure*}
+	\begin{minipage}{1 \textwidth}
+		\begin{center}
+			\includegraphics[width = 0.75 \textwidth]{figures/linesegs}
+		\end{center}
+	\end{minipage}
+	\vspace{1cm}
+	\begin{minipage}{1 \textwidth}
+		\begin{center}
+			\includegraphics[width = 0.95 \textwidth]{figures/linesegs2}
+		\end{center}
+	\end{minipage}
+	\caption{Top panel: Voronoi regions for two line segments, $l_1$ and $l_2$.
+	Bottom panel: Voronoi regions for five line segments, $l_1,\, l_2,\, ...,\, l_5$.
+	The line segments and their endpoints are marked in blue. The small red points represent the Voronoi vertices.
+	The black lines are the bisectors of the Voronoi regions, where the solid lines delimit finite and the dashed lines
+	infinite regions. Helper lines are marked in red.
+	\label{fig:linesegs_voro}}
+\end{figure*}
 
 
 \subsection{Simplification of the Voronoi diagram}
